--- a/kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
+++ b/kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
@@ -19,8 +19,7 @@ metadata:
     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
     ## SSL Settings
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
-    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:084375565917:certificate/b9b8a589-3740-49a9-a5aa-dbe4fbeb47eb
-    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:966193076481:certificate/559448bd-f44d-4726-a919-3bc598ec7324    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
     # SSL Redirect Setting
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     # External DNS - For creating a Record Set in Route53
